--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanju Vashist</title>
+    <title>AI WRAPPER</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -21,8 +22,7 @@
                     <img src="images/logo.png" alt="Profile Picture" class="avatar">
                 </div>
                 <div class="profile-info">
-                    <h1>sanju sharma </h1>
-                    <p class="job-title">App developer</p>
+                    <h1> AI WRAPPER </h1>
                 </div>
 
                 <!-- ye dubara phone khater h  -->
@@ -31,8 +31,8 @@
                         <img src="images/logo.png" alt="Profile Picture">
                     </div>
                     <div class="mobile-info">
-                        <h1>sanju sharma </h1>
-                        <p class="job-title">app developer</p>
+                        <h1>Ai wrapper  </h1>
+                        <p class="job-title">kuch to tha</p>
                     </div>
                 </div>
 
@@ -43,36 +43,36 @@
                         <span class="label">EMAIL</span>
                         <div class="value">
                             <i class="fas fa-envelope"></i>
-                            sanjuvashist221@gmail.com
+                            aiwrapper@gmail.com
                         </div>
                     </div>
                     <div class="contact-item">
                         <span class="label">PHONE</span>
                         <div class="value">
                             <i class="fas fa-phone"></i>
-                            +91 85720-69441
+                            000000000091+
                         </div>
                     </div>
                     <div class="contact-item">
-                        <span class="label">BIRTHDAY</span>
+                        <span class="label">Date to know</span>
                         <div class="value">
                             <i class="fas fa-calendar"></i>
-                            June 13, 3005
+                            1010111001
                         </div>
                     </div>
                     <div class="contact-item">
                         <span class="label">LOCATION</span>
                         <div class="value">
                             <i class="fas fa-location-dot"></i>
-                            Jind, Haryana , Bharat.
+                            Mullana , Ambala , India
                         </div>
                     </div>
                 </div>
 
                 <div class="social-links">
-                     <a href="https://www.instagram.com/sanju_vashist22/profilecard/?igsh=aXd1aXRvZ3JwNDRy"target="_blank"  class="social-link"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/sanju-vashist" target="_blank" class="social-link"><i class="fab fa-github"></i> </a>
-                    <a href="https://www.linkedin.com/in/sanju-vashist-18954b328" class="social-link"><i class="fab fa-linkedin"></i></a>
+                     <a href="#"target="_blank"  class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank" class="social-link"><i class="fab fa-github"></i> </a>
+                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </aside>
@@ -82,8 +82,7 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#education">Experience</a></li>
-                    <li><a href="#technical-skills">Skills</a></li>
+                    <li><a href="#about">Ai</a></li>
                     <li><a href="#get-in-touch">Contact</a></li>
                 </ul>
                 <button class="theme-toggle" aria-label="Toggle theme">
@@ -108,8 +107,8 @@
             <section id="about">
                 <h2>About Me</h2>
                 <div class="section-content">
-                    <p>I am Sanju, a 2nd-year BTech Computer Engineering student at Maharishi Markandeshwar University (MMU), Mullana, Ambala. I often contribute to projects on GitHub and am passionate about creating innovative and unconventional solutions.</p>
-                    <p> I am a frontend web developer and a  app developer with strong skills in Flutter, Python, Firebase, Supabase, ReactNative,FastAPI and web development basics!</p>
+                    <p>AI Wrapper is your one-stop hub for discovering and accessing the best AI tools available online. We curate and organize links to a variety of AI-powered applications, making it easy for you to explore and use cutting-edge AI solutions in one place.</p>
+                    <p>Whether you're looking for AI chatbots, image generators, writing assistants, or automation tools, AI Wrapper helps you find the right tool for your needs—without the hassle of searching all over the internet.</p>
                 </div>
 
                 <h2 id="services">General Purpose AI</h2>
@@ -228,9 +227,9 @@
                 <p>If you have any questions, ideas, or just want to say hi, feel free to reach out!</p>
                 <blockquote>"Connecting is the beginning of every great story."</blockquote>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/sanju_vashist22/profilecard/?igsh=aXd1aXRvZ3JwNDRy"target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/sanju-vashist" class="social-link" target="_blank"><i class="fab fa-github"></i> </a>
-                    <a href="https://www.linkedin.com/in/sanju-vashist-18954b328" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-link" target="_blank"><i class="fab fa-github"></i> </a>
+                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                 </div>
             </section>
 
